Fix boxShadow bug in Chrome, README line spacing

--- a/src/all.css
+++ b/src/all.css
@@ -62,6 +62,10 @@ body {
     background-position: center;
 }
 
+#null-image {
+    box-shadow: none;
+}
+
 #featured-image {
     width: 48vw;
     height: auto;
